--- a/views/for-against.ejs
+++ b/views/for-against.ejs
@@ -1,57 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mohave:wght@300&family=Tilt+Neon&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" href="/stylesheets/main.css" type="text/css" />
-    <title>Advantages, Tradeoffs</title>
-  </head>
-  <body>
-    <div class="container-text">
-      <h1 class="header-text">Advantages</h1>
-      <ul class="text">
-        <li>Faster Initial Page Load</li>
-        <p class="text-smaller">
+<%- include('partials/header') %>
+<body class="bg-white flex flex-col items-center justify-start h-full text-gray-900">
+    <div class="container m-10">
+      <p class="text-5xl font-tilt mb-8 mt-8">Advantages</p>
+      <ul class="font-mohave text-gray-700">
+        <li class="text-3xl mb-2 mt-2">Faster Initial Page Load</li>
+        <p class="text-base">
           Users see content more quickly since the server sends a fully rendered
           HTML page.
         </p>
-        <li>Improved SEO</li>
-        <p class="text-smaller">
+        <li class="text-3xl mb-2 mt-2">Improved SEO</li>
+        <p class="text-base">
           Search engines can more easily crawl and index content because the
           initial HTML is complete and contains the relevant information.
         </p>
-        <li>Better Performance on Low-Powered Devices</li>
-        <p class="text-smaller">
+        <li class="text-3xl mb-2 mt-2">Better Performance on Low-Powered Devices</li>
+        <p class="text-base">
           Devices with limited processing power benefit from the server doing
           more of the rendering work.
         </p>
       </ul>
     </div>
-    <div class="container-text">
-      <h1 class="header-text">Disadvantages</h1>
-      <ul class="text">
-        <li>Server load</li>
-        <p class="text-smaller">
+    <div class="container m-10">
+      <p class="text-5xl font-tilt mb-8 mt-8">Disadvantages</p>
+      <ul class="text-xl font-mohave text-gray-700">
+        <li class="text-3xl mb-2 mt-2">Server load</li>
+        <p class="text-base">
           Generating HTML on the server can increase server load, especially for
           complex pages or high traffic.
         </p>
-        <li>Development complexity</li>
-        <p class="text-smaller">
+        <li class="text-3xl mb-2 mt-2">Development complexity</li>
+        <p class="text-base">
           Implementing SSR may add complexity to the development process, as
           developers need to manage server-side rendering logic.
         </p>
       </ul>
     </div>
-    <div class="links-container">
-      <a href="/" class="link">What is SSR</a>
-      <a href="/facts" class="link">How SSR works</a>
+    <div class="flex">
+      <a href="/" class="font-mohave text-white bg-indigo-700 text-lg py-2 px-4 rounded-full no-underline m-6 hover:bg-indigo-800">What is SSR</a>
+      <a href="/facts" class="font-mohave text-white bg-indigo-700 text-lg py-2 px-4 rounded-full no-underline m-6 hover:bg-indigo-800">How SSR works</a>
     </div>
-    <footer class="footer">
-      This is a small site made for educational purposes. Source: ChatGPT
-      (19.10.2023)
-    </footer>
+    <%- include('partials/footer') %>
   </body>
 </html>
