--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mohave:wght@300&family=Tilt+Neon&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" href="/stylesheets/main.css" type="text/css" />
-    <title>This is the main site</title>
-  </head>
-  <body>
-    <h1 class="header"><%=message%></h1>
-    <div class="container-text">
-      <h2 class="header-text">SSR stands for Server-Side Rendering.</h2>
-      <p class="text">
+<%- include('partials/header') %>
+<body class="bg-white flex flex-col items-center justify-start h-full text-gray-900">
+    <h1 class="text-8xl font-tilt mb-4 mt-8 text-indigo-800"><%=message%></h1>
+    <div class="container m-10">
+      <h2 class="text-5xl font-tilt mb-8 mt-8">SSR stands for Server-Side Rendering.</h2>
+      <p class="text-xl font-mohave text-gray-700">
         It is a technique used in web development where a web server generates
         HTML pages with content dynamically inserted before sending them to the
         client's web browser. In SSR, the server is responsible for rendering
@@ -23,13 +11,10 @@
         to the client.
       </p>
     </div>
-    <div class="links-container">
-      <a href="/facts" class="link">How SSR works</a>
-      <a href="/for-against" class="link">Advantages & Trade-offs</a>
+    <div class="flex">
+      <a href="/facts" class="font-mohave text-white bg-indigo-700 text-lg py-2 px-4 rounded-full no-underline m-6 hover:bg-indigo-800">How SSR works</a>
+      <a href="/for-against" class="font-mohave text-white bg-indigo-700 text-lg py-2 px-4 rounded-full no-underline m-6 hover:bg-indigo-800">Advantages & Trade-offs</a>
     </div>
-    <footer class="footer">
-      This is a small site made for educational purposes. Source: ChatGPT
-      (19.10.2023)
-    </footer>
+    <%- include('partials/footer') %>
   </body>
 </html>
